--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,43 +64,42 @@ markdown_extensions:
 
 nav:
   - Home: index.md
-  - Getting Started:
-    - 'Chapter 1: "With great power comes great responsibility"': chapters/chapter-01.md
-    - "Chapter 2: Responsibility isn't a feature, it's a foundation!": chapters/chapter-02.md
-    - 'Chapter 3: The ultimate impact of generative AI hinges on Trust': chapters/chapter-03.md
-    - 'Chapter 4: Microsoft Trustworthy AI': chapters/chapter-04.md
-    - 'Chapter 5: Transparency as a Feature, Not a Checkmark': chapters/chapter-05.md
   - Core Concepts:
-    - 'Chapter 6: Ethical and Policy Alignment': chapters/chapter-06.md
-    - 'Chapter 7: Reliability under Uncertainty': chapters/chapter-07.md
-    - 'Chapter 8: Security as Core Design, Not Perimeter Defence': chapters/chapter-08.md
-    - 'Chapter 9: A Practical Guide to Operationalizing Trust in Agents': chapters/chapter-09.md
-    - 'Chapter 10: Responsible AI Lifecycle': chapters/chapter-10.md
-  - Technical Foundations:
-    - 'Chapter 11: Identifying Harms': chapters/chapter-11.md
-    - 'Chapter 12: Manual and automated evaluations': chapters/chapter-12.md
-    - 'Chapter 13: Measurement Challenges': chapters/chapter-13.md
-    - 'Chapter 14: Design for Observable Trust Signals': chapters/chapter-14.md
-    - 'Chapter 15: Continuous Evaluation & Monitoring': chapters/chapter-15.md
-  - Generative AI:
-    - 'Chapter 16: Manual evaluation for models and apps': chapters/chapter-16.md
-    - 'Chapter 17: Large Language Models': chapters/chapter-17.md
-    - 'Chapter 18: Prompt Engineering': chapters/chapter-18.md
-    - 'Chapter 19: Fine-tuning Techniques': chapters/chapter-19.md
-    - 'Chapter 20: Retrieval Augmented Generation': chapters/chapter-20.md
-  - Safety and Security:
-    - 'Chapter 21: AI Safety Principles': chapters/chapter-21.md
-    - 'Chapter 22: Adversarial Attacks': chapters/chapter-22.md
-    - 'Chapter 23: Model Security': chapters/chapter-23.md
-    - 'Chapter 24: Secure Deployment': chapters/chapter-24.md
-    - 'Chapter 25: Incident Response': chapters/chapter-25.md
-  - Testing and Validation:
+      - 'Chapter 1: "With great power comes great responsibility"': chapters/chapter-01.md
+      - "Chapter 2: Responsibility isn't a feature, it's a foundation!": chapters/chapter-02.md
+      - 'Chapter 3: The ultimate impact of generative AI hinges on Trust': chapters/chapter-03.md
+      - 'Chapter 4: Microsoft Trustworthy AI': chapters/chapter-04.md
+      - 'Chapter 5: Transparency as a Feature, Not a Checkmark': chapters/chapter-05.md
+      - 'Chapter 6: Ethical and Policy Alignment': chapters/chapter-06.md
+      - 'Chapter 7: Reliability under Uncertainty': chapters/chapter-07.md
+      - 'Chapter 8: Security as Core Design, Not Perimeter Defence': chapters/chapter-08.md
+      - 'Chapter 9: A Practical Guide to Operationalizing Trust in Agents': chapters/chapter-09.md
+      - 'Chapter 10: Responsible AI Lifecycle': chapters/chapter-10.md
+  - Map:
+      - 'Chapter 11: Identifying Harms': chapters/chapter-11.md
+  - Measure:
+      - 'Chapter 12: Manual and automated evaluations': chapters/chapter-12.md
+      - 'Chapter 13: Measurement Challenges': chapters/chapter-13.md
+      - 'Chapter 14: Design for Observable Trust Signals': chapters/chapter-14.md
+      - 'Chapter 15: Continuous Evaluation & Monitoring': chapters/chapter-15.md
+      - 'Chapter 16: Manual evaluation for models and apps': chapters/chapter-16.md
+      - 'Chapter 17: Large Language Models': chapters/chapter-17.md
+      - 'Chapter 18: Prompt Engineering': chapters/chapter-18.md
+      - 'Chapter 19: Fine-tuning Techniques': chapters/chapter-19.md
+      - 'Chapter 20: Retrieval Augmented Generation': chapters/chapter-20.md
+      - 'Chapter 21: AI Safety Principles': chapters/chapter-21.md
+  - Mitigate:
+      - 'Chapter 22: Adversarial Attacks': chapters/chapter-22.md
+      - 'Chapter 23: Model Security': chapters/chapter-23.md
+      - 'Chapter 24: Secure Deployment': chapters/chapter-24.md
+      - 'Chapter 25: Incident Response': chapters/chapter-25.md
+  - Operate:
     - 'Chapter 26: AI Testing Strategies': chapters/chapter-26.md
     - 'Chapter 27: Model Validation': chapters/chapter-27.md
     - 'Chapter 28: Performance Metrics': chapters/chapter-28.md
     - 'Chapter 29: Continuous Monitoring': chapters/chapter-29.md
+  - Conclusion & Resources:
     - 'Chapter 30: A/B Testing for AI': chapters/chapter-30.md
-  - Responsible AI:
     - 'Chapter 31: AI Governance': chapters/chapter-31.md
     - 'Chapter 32: Regulatory Compliance': chapters/chapter-32.md
 
